--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,7 +6,31 @@
     = stylesheet_link_tag    "application"
     = javascript_include_tag "application"
     = csrf_meta_tags
-  %body
-    %p.notice= notice
-    %p.alert= alert
-    = yield
+  %body{:class => params[:controller]}
+    #container.container
+      %header
+        %nav
+          %ul.hmenu
+            - if user_signed_in?
+              %li
+                = link_to('Logout', destroy_user_session_path, :method=>'delete')
+            - else
+              %li
+                = link_to('Login', new_user_session_path)
+            - if user_signed_in?
+              %li
+                = link_to('Edit account', edit_user_registration_path)
+            - else
+              %li
+                = link_to('Sign up', new_user_registration_path)
+
+            - flash.each do |name, msg|
+              = content_tag :div, msg, :id => "flash_\#{name}" if msg.is_a?(String)
+            %p.notice= notice
+            %p.alert= alert
+
+      #main{:role => "main"}
+        = yield
+
+      %footer
+
