--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -23,14 +23,9 @@
             - else
               %li
                 = link_to('Sign up', new_user_registration_path)
-
             - flash.each do |name, msg|
-              = content_tag :div, msg, :id => "flash_\#{name}" if msg.is_a?(String)
-            %p.notice= notice
-            %p.alert= alert
-
+              = content_tag :div, msg, :id => "flash_#{name}" if msg.is_a?(String)
       #main{:role => "main"}
         = yield
-
       %footer
 
